--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -2,19 +2,23 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.tablelist {
-     border-collapse: collapse;
-    width: 100%;
+thead, tfoot {
+    display: none;
 }
-
-.tablelist td,
-.tablelist th {
-    border: 1px solid #ddd;
-    padding: 8px;
+table {
+    background: none !important;
+    border: none !important;
 }
-
-.tablelist tr:nth-child(even) {
-    background-color: #f2f2f2;
+tr {
+    display: inline-block;
+    padding: 1rem 0.5rem;
+    margin: 1.5rem;
+    border: 1px solid grey;
+    border-radius: 10px;
+    box-shadow: 0 0 10px;
+}
+td {
+    display: block;
 }
 
 .tablelist tr:hover {
