--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -1,13 +1,16 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(218, 178, 146);
 }
 
 thead, tfoot {
     display: none;
 }
+
 table {
     background: none !important;
     border: none !important;
+    
 }
 tr {
     display: inline-block;
@@ -15,41 +18,49 @@ tr {
     margin: 1.5rem;
     border: 1px solid grey;
     border-radius: 10px;
-    box-shadow: 0 0 10px;
+    box-shadow: 1px 1px 8px grey;
+    background-color: white;
 }
 td {
     display: block;
+    padding: 4px;
 }
 
 .tablelist tr:hover {
     background-color: #ddd;
 }
 
-.tablelist th {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    text-align: left;
-    background-color: brown;
-    background-position: center;
-    background-size: cover;
-    color: white;
-}
-
 .searchform {
    padding: 10px;
 }
 
-.header {
+header {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 25px;
-    margin-right: 35px;
+   justify-content: space-between;
+   margin: 20px 35px;
 }
+.header-left {
+    float: left;
+
+}
+.header-right {
+    float: right;
+}
+header input {
+    margin-left: 10px;
+}
+h1 {
+    display: flex;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
 
 .inputField,
 .button {
-    padding: 10px;
+    padding: 6px 12px;
     border-radius: 5px;
+    margin-right: 4px;
 }
 
 .button:hover {
@@ -130,6 +141,7 @@ label {
 .searchPanel {
     position: fixed;
     background-color: sandybrown;
+    background-image: url("brown-cows.jpg");
     background-size: cover;
     height: 100vh;
     width: 30px;
